tests/samples/negative/control_flow/for_range_scope.ax
module for_range_scope;

fn main() -> i32 {
    for i in range(3) {
    }
    return i;
}
